--- a/docs/files/UCM/PCI.Rmd
+++ b/docs/files/UCM/PCI.Rmd
@@ -378,7 +378,7 @@ Due to mispecification of the correlation matrix, the standard errors may be bia
 - Compute $\hat f_b(t)$, and obtain the standard error of $\hat f(t)$:
 
 $$
-    SE\{\hat f(t)\} = \sqrt{\frac{1}{B}\sum^B_{b=1}\{\hat f_b(t)-\bar f(t)\}^2},
+    SE\lbrace\hat f(t)\rbrace = \sqrt{\frac{1}{B}\sum^B_{b=1}\lbrace\hat f_b(t)-\bar f(t)\rbrace^2},
 $$
 
 - with $\bar f(t)=\frac{1}{B}\sum^B_{b=1}\hat f_b(t)$.
