--- a/docs/p/plotathon/f22.qmd
+++ b/docs/p/plotathon/f22.qmd
@@ -25,6 +25,10 @@ filters:
   - reveal-auto-agenda
 ---
 
+## Website
+
+[https://www.inqs.info/p/plotathon/f22.html](https://www.inqs.info/p/plotathon/f22.html#/title-slide)
+
 # Installation
 
 ## Installing R
