--- a/books/09-Solito/index.qmd
+++ b/books/09-Solito/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Solito"
 date: "2023-08-25"
-image: https://m.media-amazon.com/images/I/81JRZb2bfaL._AC_UF1000,1000_QL80_.jpg
+image: solito.jpeg
 categories: [memoir]
 ---
 
@@ -12,7 +12,7 @@ Solito: A Memoir
 
 Javier Zamora
 
-## Book Availability
+#### Book Availability
 
 [Amazon Link](https://www.amazon.com/Solito-Memoir-Javier-Zamora/dp/0593498062)
 :::
