--- a/books/12-Why-Dont-Like-School/index.qmd
+++ b/books/12-Why-Dont-Like-School/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Why Don't Students Like School?"
 date: "2024-01-10"
-image: https://pbs.twimg.com/media/Eb2NhLhXQAA8rCZ.jpg
+image: students.jpeg
 categories: [learning]
 ---
 
@@ -12,7 +12,7 @@ Why Don't Students Like School?: A Cognitive Scientist Answers Questions About H
 
 Daniel Willingham
 
-## Book Availability
+#### Book Availability
 
 [Amazon Link](https://www.amazon.com/Why-Dont-Students-Like-School/dp/1119715660/ref=sr_1_1?crid=TE7L6FNMKP20&dib=eyJ2IjoiMSJ9.sr4CrVEO7XhsEOYELyFBV0qKTpgCKx1xwKvAccRnQX5OsgiXOY_QUVowaYEWUsLcLiCPZpkb2eJweNk7b6AVTTHTkJnvcKOc96Em8o-dlXSgzg2fMYlxZeyqed_4atmggiZGZASR3qPoG5CtDxNoSxDEGSOIHbIkjXd9NYXNq96JL87vAOSjyLz6jzuszTlI1oSt2jP7ID3PCx_6x5kAEVb39Nmf8I42LtiRsi277no.yyO0MtrbirfWHcxi3elf_qpxlyJ6VGtash0R98qtbvA&dib_tag=se&keywords=why+students+don%27t+like+school&qid=1705913176&s=books&sprefix=Why+Students%2Cstripbooks%2C143&sr=1-1)
 :::
