--- a/blog/2024-04-11-zero-trick/index.qmd
+++ b/blog/2024-04-11-zero-trick/index.qmd
@@ -2,9 +2,9 @@
 title: "The 'Zero-Trick' in Bayesian Survival Analysis"
 author: "Isaac Quintanilla Salinas"
 description: "The zero-trick explained in bayesian survival analysis."
-draft: false
-date: 2023-01-31
-image: "CI.jpg"
+draft: true
+date: 2024-01-31
+image: ci.jpg
 categories: 
   - Statistics
 knitr:
