--- a/docs/cv/cv.qmd
+++ b/docs/cv/cv.qmd
@@ -427,8 +427,11 @@ format:
   \vspace{3pt}
 \end{normalsize}
 ```
--   Magdaleno, Francisco, **Salinas INQ**, and Rothstein, Stephen. Vocal Functional Flexibility in a Non-Primate Vocal Learning Species. Journal of Language Evolution *Conditionally Accepted*
+-   Magdaleno, Francisco, **Salinas INQ**, and Rothstein, Stephen. Vocal Functional Flexibility in a Non-Primate Vocal Learning Species. Journal of Language Evolution
+
 -   Hawkins LR, Magdaleno F, **Salinas INQ**, and Peer BD. Egg shape in an obligate brood parasite contributes to decreased temperature variation during incubation. Current Zoology
+
+-   Krisha Algoso, Selene Lopez, Barbara Reque, Leniha Lagarde, Natalie Leon, Gabriella Amador, **Isaac Quintanilla Salinas,** Ashley McCarley, and Caryl Ann Becerra. Antibacterial Potential of Native Medicinal Chumash Plants on *Bacillus subtilis*, *Escherichia coli*, and *Pseudomonas fluorescens*. Microorganisims
 
 ```{=tex}
 \begin{normalsize}
@@ -436,15 +439,17 @@ format:
   \vspace{3pt}
 \end{normalsize}
 ```
--   Flores A., Parker Cappiello L., **Quintanilla Salinas I**. (2023) Challenges and successes of emergency online teaching in statistics courses. Journal of Statistics and Data Science Education. doi.org/10.1080/26939169.2023.2231036
+-   Juarez BH, **Quintanilla-Salinas I**, Lacey MP, O'Connell A. (2024) Water Availability and Temperature as Modifiers of Evaporative Water Loss in Tropical Frogs. *Integrative and Comparative Biology.* doi.org/10.1093/icb/icae057
 
--   Gill AS, Perez L, **Salinas INQ**, Byers SR, Liu Y, Hickey BL, Zhong W, Hooley RJ. Selective Array-based Sensing of Anabolic Steroids in Aqueous Solution by Host:Guest Reporter Complexes. Chemistry. 2019. 25(7):1740-1745. doi: 10.1002/chem.201804854
+-   Flores A., Parker Cappiello L., **Quintanilla Salinas I**. (2023) Challenges and successes of emergency online teaching in statistics courses. *Journal of Statistics and Data Science Education.* doi.org/10.1080/26939169.2023.2231036
 
--   Bellettiere J, Chuang E, Hughes SC, **Quintanilla I**, Hofstetter CR, Hovell MF. Association Between Parental Barriers to Accessing a Usual Source of Care and Children's Receipt of Preventative Services. Public Health Reports. 2017. 132(3):316-325. doi:10.1177/0033354917699831
+-   Gill AS, Perez L, **Salinas INQ**, Byers SR, Liu Y, Hickey BL, Zhong W, Hooley RJ. Selective Array-based Sensing of Anabolic Steroids in Aqueous Solution by Host: Guest Reporter Complexes. *Chemistry*. 2019. 25(7):1740-1745. doi: 10.1002/chem.201804854
 
--   Pretanvil JA, **Salinas IQ**, Piccioni DE. Glioblastoma in elderly: treatment patterns and survival. CNS Oncology. 2016. 6(1):19-28. doi: 10.2217/cns-2016-0023.
+-   Bellettiere J, Chuang E, Hughes SC, **Quintanilla I**, Hofstetter CR, Hovell MF. Association Between Parental Barriers to Accessing a Usual Source of Care and Children's Receipt of Preventative Services. *Public Health Reports*. 2017. 132(3):316-325. doi:10.1177/0033354917699831
 
--   Baldwin MR, Peterson E, Easthausen I, **Quintanilla I**, Colago E, Sonett JR, D'Ovidio F, Bacchetta M, Costa J, Diamond J, Christie JD, Arcasoy SM, Lederer DJ. Donor age and early graft failure after lung transplantation: a cohort study. Am J Transplant. 2013. 13(10):2685-95. Epub 2013/08/26. DOI: 10.1111/ajt.12428.
+-   Pretanvil JA, **Salinas IQ**, Piccioni DE. Glioblastoma in elderly: treatment patterns and survival. *CNS Oncology*. 2016. 6(1):19-28. doi: 10.2217/cns-2016-0023.
+
+-   Baldwin MR, Peterson E, Easthausen I, **Quintanilla I**, Colago E, Sonett JR, D'Ovidio F, Bacchetta M, Costa J, Diamond J, Christie JD, Arcasoy SM, Lederer DJ. Donor age and early graft failure after lung transplantation: a cohort study. *Am J Transplant*. 2013. 13(10):2685-95. Epub 2013/08/26. DOI: 10.1111/ajt.12428.
 
 ```{=tex}
 \begin{normalsize}
