--- a/blog/2024-12-26-python-programming/index.qmd
+++ b/blog/2024-12-26-python-programming/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Basic Python Programming"
 date: 2024-12-26
+date-modified: 2024-12-28
 description: "Basics of Python Programming."
 author: "Isaac Quintanilla Salinas"
 draft: false
@@ -20,8 +21,11 @@ knitr:
 When writing this post, I realize how difficult it will be for me to create a comprehensive tutorial about Python. There are things I learned along the way that makes it easier for me to pick up Python from programming in R, and most importantly c++. For example, Python's indexing begins with 0 instead of 1, python does not uses braces for code blocks, or how functions can be applied to objects. This makes it easier for me to learn programming in python. However, I certainly struggled with these topics when first learning about it, but I managed to learn it. And I believe anyone can as well.
 
 
-Most of the material I talk about can be found in Wes McKinney's [Python for Data Analysis](https://wesmckinney.com/book/); specifically, in Chapter 2, 3, and 4.
+## Recommended Material
 
+- Wes McKinney's [Python for Data Analysis](https://wesmckinney.com/book/)
+
+## Post 1 12/26/24
 
 ### Loaded Modules
 
@@ -30,12 +34,12 @@ import math
 import numpy as np
 ```
 
-## Python as a calculator
+### Python as a calculator
 
 This is almost a direct copy of my own tutorial written in R. Notice how several of the commands you learned in R also work in Python, with some slight deviations.
 
 
-### Calculator
+#### Calculator
 
 This section focuses on the basic calculation that can be done in R. This is done by using different operators in Python. The table below provides some of the basic operators Python can use:
 
@@ -49,7 +53,7 @@ This section focuses on the basic calculation that can be done in R. This is don
 | `?`         | Help Documentation |
 
 
-#### Addition
+##### Addition
 
 To add numbers in R, all you need to use the `+` operator. For example $2 + 2 = 4$. When you type it in R you have:
 
@@ -67,7 +71,7 @@ To add more than 2 numbers, you can simply just type it in.
 
 This provides the number 6.
 
-#### Subtraction
+##### Subtraction
 
 To subtract numbers, you need to use the `-` operator. Try `4 - 2`:
 
@@ -89,7 +93,7 @@ Now try `4 + 4 - 2 + 8`:
 4 + 4 - 2 + 8
 ```
 
-#### Multiplication
+##### Multiplication
 
 To multiply numbers, you will need to use the `*` operator. Try `4 * 4`:
 
@@ -97,7 +101,7 @@ To multiply numbers, you will need to use the `*` operator. Try `4 * 4`:
 4 * 4
 ```
 
-#### Division
+##### Division
 
 To divide numbers, you can use the `/` operator. Try `9 / 3`:
 
@@ -105,7 +109,7 @@ To divide numbers, you can use the `/` operator. Try `9 / 3`:
 9 / 3
 ```
 
-#### Exponents
+##### Exponents
 
 To exponentiate a number to the power of another number, you can use the `**` operator. Try `2**5`:
 
@@ -114,7 +118,7 @@ To exponentiate a number to the power of another number, you can use the `**` op
 ```
 
 
-#### Roots
+##### Roots
 
 To take the n-th root of a value, use the `**` operator with the `/` operator to take the n-th root. For example, to take $\sqrt[5]{35}$, type `32**(1/5)`:
 
@@ -122,7 +126,7 @@ To take the n-th root of a value, use the `**` operator with the `/` operator to
 32**(1/5)
 ```
 
-#### Logarithms
+##### Logarithms
 
 We will use the `math` module for mathematical functions:
 
@@ -148,7 +152,7 @@ math.exp(2)
 ```
 
 
-### Comparing Numbers {#sec-comparing-numbers}
+#### Comparing Numbers {#sec-comparing-numbers}
 
 Another important part of R is comparing numbers. When you compare two numbers, R will tell if the statement is `True` or `False`. Below are the different comparisons you can make:
 
@@ -161,7 +165,7 @@ Another important part of R is comparing numbers. When you compare two numbers, 
 | `==`     | Equals                |
 | `!=`     | Not Equals            |
 
-#### Less than/Greater than
+##### Less than/Greater than
 
 To check if one number is less than or greater than another number, you will use the `>` or `<` operators. Try `5 > 4`:
 
@@ -177,7 +181,7 @@ Notice that R states it's true. It evaluates the expression and tells you if it'
 
 Notice that R tells you it is false.
 
-#### Less than or equal to/Greater than or equal to
+##### Less than or equal to/Greater than or equal to
 
 To check if one number is less than or equal to/greater than or equal to another number, you will use the `>=` or `<=` operators. Try `5 >= 5`:
 
@@ -197,7 +201,7 @@ Try `5 <= 4`
 5 <= 4
 ```
 
-#### Equals and Not Equals
+##### Equals and Not Equals
 
 To check if 2 numbers are equal to each other, you can use the `==` operator. Try `3 == 3`:
 
@@ -227,11 +231,11 @@ You may be asking why use `!=` instead of `==`. They both provides similar resul
 
 In general, the `!` operator means not or opposite. It can be used to change an `True` to a `False` and vice-versa.
 
-## Modules and Functions
+### Modules and Functions
 
 As I am learning Python, I am noticing the importance of modules since it extends the functionality of Python, the same way as R packages do. Base Python, is very bare-bones. I think the reason being is that R loads several packages up for your own use, I assumed Python would load a bit more. Anyways, we need to load modules for more functionality.
 
-### Load a Module
+#### Load a Module
 
 The `import` command will load up a module. The 
 
@@ -242,7 +246,7 @@ import math
 import numpy as np
 ```
 
-## Tuples and Lists
+### Tuples and Lists
 
 After getting a handle of python with basic computations and basic modules, my next urging was to create a vector in the same way that I do it in R. After researching around, I noticed that Python had these vector-like objects called Tuple and Lists. The main differenece is that Tuples are immutable (cannot alter) and Lists are mutable (can alter). 
 
@@ -276,11 +280,11 @@ b*5
 
 As you can see, you cannot treat this as the traditional vector from R, this has lead me to look at arrays from Numpy.
 
-## Numpy
+### Numpy
 
 Numpy, or Numerical Python, is a Python module used for scientific computing. From what I can tell, you conduct computational tasks on a Numpy array. This makes me think that Numpy is closest to vector a matrix operations from R.
 
-### Create a Numpy Array
+#### Create a Numpy Array
 
 To create a numpy array, we will input a list into the function `np.array`:
 
@@ -314,7 +318,7 @@ np.median(c)
 
 Notice how some functions, like `shape`, and be provided after the object (seperated by a period) without paranthesis. Other objects need the paranthesis to be executed. You can also type the name of the function first, and put the object in the paranthesis.
 
-### Indexing a Numpy Array
+#### Indexing a Numpy Array
 
 We can index the array `c` using the square brackets on the object:
 
@@ -352,3 +356,7 @@ c
 Notice how `c` now contains the value 909, even though that `d` was the only one changed. This is because Python creates the object, and the names of those objects (`c` and `d`) point and/or transform that object as necessary. Any changes to one named object will change the overall object. It does not create a new object like in R.
 
 After I learned this, I did not know how I feel about this. I personally liked the R's way to copy and paste objects, which allowed me to manipulate something without having to worry about changing the original. After some thinking, I don't think I liked it, but that could be because I am stuck in my ways. There may be some advantages on how Python treats objects, but as of right now, I do not know.
+
+## Post 2 12/28/2024
+
+I have completed several posts 
