--- a/blog/2024-12-22-positron/index.qmd
+++ b/blog/2024-12-22-positron/index.qmd
@@ -1,7 +1,8 @@
 ---
-title: "Positron and Python"
+title: "Positron"
 date: 2024-12-22
-description: "Getting Started with Positron and Python."
+date-modified: 2025-01-06
+description: "Getting Started with Positron"
 author: "Isaac Quintanilla Salinas"
 draft: false
 editor: source
@@ -48,17 +49,7 @@ To learn more about Positron and VS Code, visit the following pages:
   - [VS Code Basics Videos](https://code.visualstudio.com/docs/getstarted/introvideos)
 
 
-## Python
-
-As you are installing Positron, you should notice that there are instructions to installing python on to your system. If you have python already installed on your computer, Positron should allow you to point to it. However, Posit has recommended to use [pyenv](https://github.com/pyenv/pyenv). After playing around with it, I also recommend it for now.
-
-Why pyenv? First, it looks like Positron works better with pyenv installed. Therefore, I decided to stick with posit's recommendation and utilize it. Afterwards, I played around with it and installed the latest version of python and some modules/libraries/packages. It worked, and it seemed like it did not change anything in my systen for now. I think what I liked the most about it was the minimalist nature of the program. I feel a little more confident that it only install this piece of software and nothing more. 
-
-### Virtual Environments and pyenv
-
-I recently learned that the best way to use python is by creating virtual environments and installing everything you need for python in that environment. This is a completely new idea for me since R never required me to use it. I have heard of [renv](https://rstudio.github.io/renv/articles/renv.html) designed to create a reproducible environment, but I never utilized. In hindsight, if I learned more about it, python may have been easier to start off.
-
-## Data Science Projects
+## Post 1: Data Science Projects
 
 
 In Positron, and VS Code, projects are created as workspaces by associating folders as specialized place called workspaces. These workspaces allow you to organize your projects as necessary, such as creating folders for you scripts, data, source files, and much more. Additionally, you can initialize a git repository for the work space 
@@ -69,7 +60,7 @@ It is highly recommended to creat a workspace for any project you work on.
 
 To create a Python-based workspace, you will go to the top right corner and click on the folder icon:
 
-![](img/Screenshot%20From%202024-12-25%2014-36-21.png)
+![](img/Screenshot%20From%202024-12-26%2014-36-21.png)
 
 This will open a new drop-down menu:
 
@@ -92,4 +83,16 @@ I recommend doing so. This will create a new environment that I believe will onl
 ![](img/Screenshot%20From%202024-12-26%2014-39-50.png)
 
 You should click "New Window" for now. This will open a new session of Positron. It may take a few minutes to create the python environment, but it will work after.
+
+## Post 2 (1/6/2024): Quarto
+
+When working in Quarto, the python chunks can send code to a console to be executed. The console is set up to use python via pyenv. However, whenever the quarto document gets an R chunk, the console will immediately change to an R console, and all the python chunks will be sent to the R console and evaluated with [reticulate](https://rstudio.github.io/reticulate/). This would be okay, but reticulate may not have all the python packages that pyenv has. I have tried searching for a way to have reticulate communicate with the pyenv installation, but I haven't found anything thus far. Therefore, I recommend installing python modules via reticulate.
+
+You can install a python module with:
+
+```{r}
+#| eval: false
+
+reticulate::py_install("polars")
+```
 
