--- a/blog/2024-12-26-python-programming/index.qmd
+++ b/blog/2024-12-26-python-programming/index.qmd
@@ -6,6 +6,7 @@ description: "Basics of Python Programming."
 author: "Isaac Quintanilla Salinas"
 draft: false
 editor: source
+navbar: false
 categories: 
   - r2py
 image: "test.jpg"
